istio/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: springboot-gateway
spec:
  selector:
    istio: ingressgateway 
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: springboot-vs
spec:
  hosts:
  - "*"
  gateways:
  - springboot-gateway
  http:
  - match:
    - uri:
        prefix: /client
    route:
    - destination:
        host: springboot-service
        port:
          number: 8080
          name: http
